[BACKLOG-39559] JDK17 - Build issue for https://github.com/pentaho/pentaho-cassandra-plugin.git